[workspace]
members = [
    "can-attachment", "clock-face", "clock-skeleton", "crayon-holder", "goggle-clip", "snowflake", "sonic-croc",
    "stick-up-cam-mk4", "weather-station-display-mount",
]
resolver = "2"

[workspace.dependencies]
#rsolid = { git = "https://github.com/camshaft/rsolid" }
rsolid = { path = "../rsolid/rsolid" }
